--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@ layout: default
       </div>
     </div>
     <div class="about-text">
-      <p>{%t pages.about.heritage.webcam2 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="www.cpev.ch/webcamvortex">{%t pages.about.heritage.webcam2link %}</a></p>
+      <p style="margin-bottom: 80px;">{%t pages.about.heritage.webcam2 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="www.cpev.ch/webcamvortex">{%t pages.about.heritage.webcam2link %}</a></p>
     </div>
     <div class="about-content">
       <h1>{% t pages.about.heritage.title2 %}</h1>
