--- a/about.html
+++ b/about.html
@@ -106,8 +106,8 @@ layout: default
         <img src="/images/about/heritage/vortex3.jpg" alt="">
       </div>
     </div>
-    <div class="about-text">
-      <p style="margin-bottom: 80px;">{%t pages.about.heritage.webcam2 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="www.cpev.ch/webcamvortex">{%t pages.about.heritage.webcam2link %}</a></p>
+    <div class="about-text2">
+      <p>{%t pages.about.heritage.webcam2 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="www.cpev.ch/webcamvortex">{%t pages.about.heritage.webcam2link %}</a></p>
     </div>
     <div class="about-content">
       <h1>{% t pages.about.heritage.title2 %}</h1>
