--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@ layout: default
         <img src="/images/about/heritage/vortex3.jpg" alt="">
       </div>
     </div>
-    <div class="about-text2">
+    <div class="about-text" id="about-text2">
       <p>{%t pages.about.heritage.webcam2 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="www.cpev.ch/webcamvortex">{%t pages.about.heritage.webcam2link %}</a></p>
     </div>
     <div class="about-content">
