--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
         <h1 class="h1_shop_section">{% t pages.index.title_shop %}</h1>
         <h2 class="h2_shop_section">{% t pages.index.text_shop %}</h2>
         <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}">
-            <img src="{% t pages.index.img_shop %}" alt="Shop!">
+            <img src="{% t pages.index.img_shop %}" alt="Shop!" width="70%" style="margin-bottom: 50px;">
         </a>
     </div>
 </div>
@@ -75,19 +75,6 @@ layout: default
                     {% t pages.index.about.texte %}
                     <strong> <a href="about">{% t pages.index.about.more %}</a></strong>
                 </p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="marchandising_section">
-    <div class="container">
-        <div class="row flex vcenter">
-            <div class="marchandising_col_1 col-md-6 fade-in-module">
-                <h1 class="shop_cta">{% t pages.index.shop.title %}</h1>
-            </div>
-            <div class="col-md-6 fade-in-module">
-                <img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, (max-width: 816px) 98vw, (max-width: 991px) 800px, 620px" src="/images/home/lausanne_tshirt.png"
-                    srcset="/images/home/lausanne_tshirt-p-500x338.png 500w, /images/home/lausanne_tshirt.png 800w">
             </div>
         </div>
     </div>
