--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
                 <input data-name="Lang" id="lang" maxlength="2" name="lang" value="{{ site.lang }}" required="required" type="hidden">
             </div>
             <div class="newsletter-form-button">
-                <input class="newsletter_cta_btn btn" data-wait="Please wait..." type="submit" value="{% t pages.index.newsletter.button %}">
+                <input class="newsletter_cta_btn btn" data-wait="Please wait..." type="submit" style="background-color: $blue-primary !important;" value="{% t pages.index.newsletter.button %}">
             </div>
         </form>
         <div class="success form-done">
