--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="shop_section">
     <div class="container">
-        <h1 class="h1_shop_section">{% t pages.index.title_shop %}</h1>
+        <h1 class="h1_shop_section">{% t pages.index.title_shop %} <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a> </h1>
         <h2 class="h2_shop_section">{% t pages.index.text_shop %}</h2>
         <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}">
             <img src="{% t pages.index.img_shop %}" alt="Shop!" width="70%" style="margin-bottom: 50px;">
