--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
         <div class="about-more-button" id="more_video">
             {% if site.lang == "fr" %} <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com/fr/news/the-lausanne-2020-generation">{% t pages.index.text_video %}</a>
             {% elsif site.lang == "de" %} <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com/de/news/the-lausanne-2020-generation">{% t pages.index.text_video %}</a>
+            {% elsif site.lang == "it" %} <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com/it/news/the-lausanne-2020-generation">{% t pages.index.text_video %}</a>
             {% else %} <a class="about-more-btn" id="text_video" target="_blank" rel="noopener noreferrer" href="https://www.lausanne2020.com/news/the-lausanne-2020-generation">{% t pages.index.text_video %}</a> {% endif %}
         </div>
     </div>
@@ -39,12 +40,13 @@ layout: default
                             <img class="grow" src="{{ new.image.url }}?w=400&h=400&q=70">
                         </div>
                         <h1 class="h1_news">
-                            {% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% else %} {{ new.titreEn }} {%
+                            {% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% elsif site.lang == "it" %} {{ new.titreIt }} {% else %} {{ new.titreEn }} {%
                             endif %}
                         </h1>
                         <p class="p_news">
                             {% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
                             {% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} 
+                            {% elsif site.lang == "it" %} {{ new.texteIt | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}
                             {% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% endif %}
                         </p>
 
