--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ layout: default
                 tw_username:lausanne2020,
                 tw_amount:3,
         
+                insta_username:2041300508,
+                insta_amount:3
+        
             %}
     </div>
 </div>
