--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@ layout: default
   <div class="container fade-in-module">
     <h1>{% t pages.about.singleevent %}</h1>
     <div class="singleevent_img">
-        <img src="/images/about/L2020_Swiss_Map.png">
+        <img src="/images/about/L2020_Swiss_Map.png" height="200px">
     </div>
   </div>
 </div>
