--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: default
         </a>
     </div>
 </div>
+<div w3-include-html="/omega_countdown/index.html"></div>
 <div class="news_section">
     <div class="container">
         <h1 class="h1_big_news">{% t pages.index.news.title %}</h1>
