--- a/countdown.html
+++ b/countdown.html
@@ -260,16 +260,16 @@ window.addEventListener("resize", onResize);
     <div id="container">
         <div id="ad">
             <div id="montre">
-                <img src="montre.jpg" id="montre" />
+                <img src="/omega_countdown/montre.jpg" id="montre" />
                 <div id="aiguilles">
                     <div id="day"></div>
-                    <img id="heures" src="heures.png" />
-                    <img id="minutes" src="minutes.png" />
-                    <img id="secondes" src="secondes.png" />
+                    <img id="heures" src="/omega_countdown/heures.png" />
+                    <img id="minutes" src="/omega_countdown/minutes.png" />
+                    <img id="secondes" src="/omega_countdown/secondes.png" />
                     
                 </div>
             </div>
-            <img src="logo.png" id="logo">
+            <img src="/omega_countdown/logo.png" id="logo">
             <div id="border"></div>
             <a href="javascript:void(0)" onclick="javascript:window.open(window.clickTag)" id="clickArea"></a>
         </div>
