--- a/countdown.html
+++ b/countdown.html
@@ -18,11 +18,11 @@ img {
 }
 @font-face {
     font-family: 'OMEGACT';
-    src: url('fonts/OmegaCT-Regular.eot'); /* IE9 Compat Modes */
-    src: url('fonts/OmegaCT-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('fonts/OmegaCT-Regular.woff') format('woff'), /* Modern Browsers */
-         url('fonts/OmegaCT-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('fonts/OmegaCT-Regular.svg#OmegaCT-Regular') format('svg'); /* Legacy iOS */
+    src: url('/omega_countdown/fonts/OmegaCT-Regular.eot'); /* IE9 Compat Modes */
+    src: url('/omega_countdown/fonts/OmegaCT-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/omega_countdown/fonts/OmegaCT-Regular.woff') format('woff'), /* Modern Browsers */
+         url('/omega_countdown/fonts/OmegaCT-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/omega_countdown/fonts/OmegaCT-Regular.svg#OmegaCT-Regular') format('svg'); /* Legacy iOS */
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
