--- a/index.html
+++ b/index.html
@@ -1,6 +1,102 @@
 --- 
 layout: default
 ---
+<style>
+body {
+    margin: 0;
+    width: 100%;
+}
+img {
+    position: absolute;
+}
+@font-face {
+    font-family: 'OMEGACT';
+    src: url('/omega_countdown/fonts/OmegaCT-Regular.eot'); /* IE9 Compat Modes */
+    src: url('/omega_countdown/fonts/OmegaCT-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('/omega_countdown/fonts/OmegaCT-Regular.woff') format('woff'), /* Modern Browsers */
+         url('/omega_countdown/fonts/OmegaCT-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('/omega_countdown/fonts/OmegaCT-Regular.svg#OmegaCT-Regular') format('svg'); /* Legacy iOS */
+    font-style: normal;
+    font-weight: normal;
+    text-rendering: optimizeLegibility;
+}
+#container {
+    position: relative;
+    min-height: 200px;
+    max-height: 640px;
+    max-width: 640px;
+    min-width: 200px;
+    width: 100%;
+    height: 100%;
+    opacity: 1;
+    background-color: #fff;
+}
+#ad {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 1
+}
+#aiguilles img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-origin: 50% 50%;
+}
+#aiguilles {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 19.0625%;
+    left: 9.84375%;
+    transform-origin:  0 0;
+    -webkit-transform-origin:  0 0;
+    -moz-transform-origin:  0 0;
+    -ms-transform-origin:  0 0;
+}
+#border {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    box-sizing: border-box;
+    border: 1px solid #bcbcbc;
+    position: absolute;
+}
+#day {
+    position: absolute;
+    display: block;
+    width: 4.8%;
+    height: 7%;
+    top: 78.3%;
+    left: 47%;
+    font-size: 14px;
+    color: #000000;
+    line-height: 17px;
+    text-align: center;
+    font-weight: 700;
+    opacity: 1;
+    font-weight: normal;
+    font-style: normal;
+    font-family: 'OMEGACT', Arial, Helvetica, sans-serif;
+}
+#logo,
+#montre {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+#clickArea {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    cursor: pointer;
+    background-color: rgba(0,0,0,0);
+    position: absolute;
+    display: block;
+}
+</style>
 <div class="hero">
     <div class="container">
         <h1 class="the_claim">{% t pages.index.title1.part1 %}<br/><span class="accent">{% t pages.index.title1.part2 %}</span></h1>
