--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: default
         </a>
     </div>
 </div>
-<link rel="stylesheet" href="{{ "/css/style-countdown.scss" | prepend: site.baseurl_root }}">
+<link rel="stylesheet" href="{{ "/css/style-countdown.css" | prepend: site.baseurl_root }}">
 <div class="countdown">
     <div id="container">
         <div id="ad">
