--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ layout: default
         </a>
     </div>
 </div>
-<link rel="stylesheet" href="{{ "/css/style-countdown.css" | prepend: site.baseurl_root }}">
 <div class="countdown">
+    <script src="/js/vendors/TweenLite.min.js"></script>
     <div id="container">
         <div id="ad">
             <div id="montre">
