--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
 </div>
 <div class="countdown">
     <script src="/js/vendors/TweenLite.min.js"></script>
+    <script src="/js/vendors/countdown.js"></script>
     <script type="text/javascript">
         var clickTag = "http://www.google.com";
     </script>
