--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ layout: default
     </div>
 </div>
 <div id="countdown_container_fr_tag" class="countdown_container">
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
-	<script src="/js/vendors/countdown.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
+	<script src="/js/vendors/countdown2.js"></script>
     <div class="logo">
         <img src="/omega_countdown/official-timekeeper-omega.png">
         <img class="retina" src="/omega_countdown/official-timekeeper-omega.svg">
