--- a/index.html
+++ b/index.html
@@ -18,33 +18,38 @@ layout: default
         </a>
     </div>
 </div>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
+<script src="/js/vendors/countdown.js" type="text/javascript" ></script>
+<link rel="stylesheet" type="text/css" href="/css/countdown.css">
+<link rel="stylesheet" type="text/css" href="/css/omegact.css">
 <div id="countdown_container_fr_tag" class="countdown_container">
-	<script src="https://code.jquery.com/jquery-1.11.3.min.js" type="text/javascript" ></script>
-	<script src="/js/vendors/countdown2.js"></script>
-    <div class="logo">
-        <img src="/omega_countdown/official-timekeeper-omega.png">
-        <img class="retina" src="/omega_countdown/official-timekeeper-omega.svg">
-    </div>
+	<div class="logo">
+		<img src="/omega_countdown/official-timekeeper-omega.png">
+		<img class="retina" src="/omega_countdown/official-timekeeper-omega.svg">
+	</div>
 
-    <div class="countdown">
-        <div class="countdown_numbers">
-            <div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">-</span></div>
-            <div class="hours cd_item"><span class="hours_label cd_label"></span><span class="hours_remaining cd_remain">-</span></div>
-            <div class="minutes cd_item"><span class="minutes_label cd_label"></span><span class="minutes_remaining cd_remain">-</span></div>
-            <div class="seconds cd_item cd_item_last"><span class="seconds_label cd_label"></span><span class="seconds_remaining cd_remain">-</span></div>
-        </div>
-        <p></p>
-    </div>
-    <div class="clock">
-        <div class="hours cd_item"><span class="clock_hours clock_digit">-</span></div>
-        <div class="inter">:</div>
-        <div class="minutes cd_item"><span class="clock_minutes clock_digit">-</span></div>
-        <div class="inter">:</div>
-        <div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">-</span></div>
-    </div>
-    <div id="border" class="border"></div>
-    <a class="omega_link" target="_blank" href="http://www.omegawatches.com/de/?xtor=ADI-211"></a>
+	<div class="countdown">
+		<div class="countdown_numbers">
+			<div class="days cd_item"><span class="days_label cd_label"></span><span class="days_remaining cd_remain">-</span></div>
+			<div class="hours cd_item"><span class="hours_label cd_label"></span><span class="hours_remaining cd_remain">-</span></div>
+			<div class="minutes cd_item"><span class="minutes_label cd_label"></span><span class="minutes_remaining cd_remain">-</span></div>
+			<div class="seconds cd_item cd_item_last"><span class="seconds_label cd_label"></span><span class="seconds_remaining cd_remain">-</span></div>
+		</div>
+		<p></p>
+	</div>
+	<div class="clock">
+		<div class="hours cd_item"><span class="clock_hours clock_digit">-</span></div>
+		<div class="inter">:</div>
+		<div class="minutes cd_item"><span class="clock_minutes clock_digit">-</span></div>
+		<div class="inter">:</div>
+		<div class="seconds cd_item cd_item_last"><span class="clock_seconds clock_digit">-</span></div>
+	</div>
+	<div id="border" class="border"></div>
+	<a class="omega_link" target="_blank" href="http://www.omegawatches.com/de/?xtor=ADI-211"></a>
 </div>
+	<script type="text/javascript">
+		$('#countdown_container_fr_tag').countdown({'lang': 'fr' });
+	</script>
 <div class="news_section">
     <div class="container">
         <h1 class="h1_big_news">{% t pages.index.news.title %}</h1>
