--- a/venues.html
+++ b/venues.html
@@ -168,3 +168,18 @@ layout: default
     </div>
   </div>
 </div>
+<div class="non_comp">
+  <h1 class="venues_title">
+    {% t pages.venues.title %
+  </h1>
+  <h3 class="venues_subtitle">
+    {% t pages.venues.subtitle1 %}
+  </h3>
+  <div class="col-md-8">
+    <p class="about_venues">
+      {% t pages.venues.text1 %}
+    </p>
+  </div>
+</div>
+     
+     
