--- a/venues.html
+++ b/venues.html
@@ -170,7 +170,7 @@ layout: default
 </div>
 <div class="non_comp">
   <h1 class="venues_title">
-    {% t pages.venues.title %
+    {% t pages.venues.title %}
   </h1>
   <h3 class="venues_subtitle">
     {% t pages.venues.subtitle1 %}
