--- a/venues.html
+++ b/venues.html
@@ -168,7 +168,7 @@ layout: default
     </div>
   </div>
 </div>
-<div class="non_comp">
+<div class="container fade-in-module">
   <h1 class="venues_title">
     {% t pages.venues.title %}
   </h1>
