--- a/venues.html
+++ b/venues.html
@@ -168,18 +168,19 @@ layout: default
     </div>
   </div>
 </div>
-<div class="container fade-in-module">
-  <h1 class="venues_title">
-    {% t pages.venues.title %}
-  </h1>
-  <h3 class="venues_subtitle">
-    {% t pages.venues.subtitle1 %}
-  </h3>
-  <div class="col-md-8">
-    <p class="about_venues">
-      {% t pages.venues.text1 %}
-    </p>
+<div class="sites" id="sites2">
+  <div class="container fade-in-module">
+    <h1 class="venues_title">
+      {% t pages.venues.title %}
+    </h1>
+    <h3 class="venues_subtitle">
+      {% t pages.venues.subtitle1 %}
+    </h3>
+    <div class="col-md-8">
+      <p class="about_venues">
+        {% t pages.venues.text1 %}
+      </p>
+    </div>
   </div>
-</div>
-     
+</div>     
      
