--- a/venues.html
+++ b/venues.html
@@ -179,11 +179,12 @@ layout: default
     <div class="col-md-8">
       <p class="about_venues">
         {% t pages.venues.text1 %}
-        <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link1 %}'> {% t pages.venues.textlink1 %} </a>
+        <br>
+        <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link1 %}'>{% t pages.venues.textlink1 %}</a>
       </p>
     </div>
     <div class="col-md-4">
-      <img src="/images/venues/Vortex_Copyright.png" />
+      <img width="60%" src="/images/venues/Vortex_Copyright.png" />
   </div>
 </div>     
      
