--- a/venues.html
+++ b/venues.html
@@ -184,7 +184,20 @@ layout: default
       </p>
     </div>
     <div class="col-md-4">
-      <img width="60%" src="/images/venues/Vortex_Copyright.png" />
-  </div>
+      <img src="/images/venues/Vortex_Copyright.png" />
+    </div>
+    <h3 class="venues_subtitle">
+      {% t pages.venues.subtitle2 %}
+    </h3>
+    <div class="col-md-8">
+      <p class="about_venues">
+        {% t pages.venues.text2 %}
+        <br>
+        <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link2 %}'>{% t pages.venues.textlink2 %}</a>
+      </p>
+    </div>
+    <div class="col-md-4">
+      <img src="/images/venues/Flon_Copyright.png" />
+    </div>
+  </div>     
 </div>     
-     
