--- a/venues.html
+++ b/venues.html
@@ -176,27 +176,27 @@ layout: default
     <h3 class="venues_subtitle">
       {% t pages.venues.subtitle1 %}
     </h3>
-    <div class="col-md-8">
+    <div class="venues_txt">
       <p class="about_venues">
         {% t pages.venues.text1 %}
         <br>
         <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link1 %}'>{% t pages.venues.textlink1 %}</a>
       </p>
     </div>
-    <div class="col-md-4">
+    <div class="venues_img">
       <img src="/images/venues/Vortex_Copyright.png" />
     </div>
     <h3 class="venues_subtitle">
       {% t pages.venues.subtitle2 %}
     </h3>
-    <div class="col-md-8">
+    <div class="venues_txt">
       <p class="about_venues">
         {% t pages.venues.text2 %}
         <br>
         <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link2 %}'>{% t pages.venues.textlink2 %}</a>
       </p>
     </div>
-    <div class="col-md-4">
+    <div class="venues_img">
       <img src="/images/venues/Flon_Copyright.png" />
     </div>
   </div>     
