--- a/venues.html
+++ b/venues.html
@@ -179,6 +179,7 @@ layout: default
     <div class="venues_txt">
       <p class="about_venues">
         {% t pages.venues.text1 %}
+        <br> &nbsp;
         <br>
         <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link1 %}'>{% t pages.venues.textlink1 %}</a>
       </p>
@@ -192,6 +193,7 @@ layout: default
     <div class="venues_txt">
       <p class="about_venues">
         {% t pages.venues.text2 %}
+        <br> &nbsp;
         <br>
         <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link2 %}'>{% t pages.venues.textlink2 %}</a>
       </p>
