--- a/venues.html
+++ b/venues.html
@@ -199,7 +199,7 @@ layout: default
       </p>
     </div>
     <div class="venues_img">
-      <img src="/images/venues/Flon_Copyright.png" />
+      <img src="/images/venues/Flon.png" />
     </div>
   </div>     
 </div>     
