--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 --- 
 layout: default
 ---
+<script src="https://gist.github.com/barryvdh/6155151.js"></script>
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
