--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 --- 
 layout: default
 ---
-<script src="https://gist.github.com/barryvdh/6155151.js"></script>
+<script src="/js/vendors/carousel.js"></script>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
