--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ layout: default
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+      <img src="/images/home/1920x1080.jpg" alt="Los Angeles" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+      <img src="/images/home/1920x1080-1.jpg" alt="Chicago" width="1100" height="500">
     </div>
     <div class="carousel-item">
-      <img src="ny.jpg" alt="New York" width="1100" height="500">
+      <img src="/images/home/1920x1080-2.png" alt="New York" width="1100" height="500">
     </div>
   </div>
   
