--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<div w3-include-html="/includes/carousel.html"></div>
+
 <div class="shop_section">
     <div class="container">
         <h1 class="h1_shop_section">{% t pages.index.title_shop %} &nbsp; <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a> </h1>
