--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div w3-include-html="/includes/carousel.html"></div>
+<link rel="import" href="/_includes/carousel.html">
 
 <div class="shop_section">
     <div class="container">
