--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<link rel="import" href="/_includes/carousel.html">
+{% include carousel.html %}
 
 <div class="shop_section">
     <div class="container">
