--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 
 {% include carousel.html %}
 
+{% include _base.scss%}
+
 <div class="shop_section">
     <div class="container">
         <h1 class="h1_shop_section">{% t pages.index.title_shop %} &nbsp; <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a> </h1>
