--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include carousel.html %}
 
-{% include _base.scss%}
+{% include ./_sass/_base.scss%}
 
 <div class="shop_section">
     <div class="container">
