--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@ layout: default
         <h1 class="the_claim">{% t pages.index.title4.part1 %}<br/><span class="accent">{% t pages.index.title4.part2 %}</span></h1>
     </div>
 </div>
-<div class="shop_section">
-    <div class="container">
-        <h1 class="h1_shop_section">{% t pages.index.title_shop %} &nbsp; <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a> </h1>
-        <h2 class="h2_shop_section">{% t pages.index.text_shop %}</h2>
-        <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}">
-            <img src="{% t pages.index.img_shop %}" alt="Shop!" width="70%" style="margin-bottom: 50px;">
-        </a>
-    </div>
-</div>
 <div class="news_section">
     <div class="container">
         <h1 class="h1_big_news">{% t pages.index.news.title %}</h1>
@@ -96,6 +87,14 @@ layout: default
                 insta_amount:3
         
             %}
+    </div>
+</div>
+<div class="shop_section">
+    <div class="container">
+        <h2 class="h2_shop_section">{% t pages.index.text_shop %} <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a></h2>
+        <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}">
+            <img src="{% t pages.index.img_shop %}" alt="Shop!" width="70%" style="margin-bottom: 50px;">
+        </a>
     </div>
 </div>
 <div class="newsletter_cta">
