--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ layout: default
 </div>
 <div class="shop_section">
     <div class="container">
-        <h2 class="h2_shop_section">{% t pages.index.text_shop %} <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a></h2>
+        <h2 class="h2_shop_section" style="margin-top: 50px; margin-bottom: 10px;">{% t pages.index.text_shop %} <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}"> {% t pages.index.txt_shop %} </a></h2>
         <a rel="noopener noreferrer" href="{% t pages.index.link_shop %}">
-            <img src="{% t pages.index.img_shop %}" alt="Shop!" width="70%" style="margin-bottom: 50px;">
+            <img src="{% t pages.index.img_shop %}" alt="Shop!" width="50%" style="margin-bottom: 30px;">
         </a>
     </div>
 </div>
