--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ layout: default
 <div class="latestnews_section">
   <div class="container">
     <h1 class="h1_contact">{% t pages.contact.title %}</h1>
-    <div class="row">
+    <div class="row" style="margin-top: 140px;">
       <div class="col-md-6 form">
           <form class="form form-contact" data-name="Email Form" id="email-form-contact" netlify-honeypot="champcache" name="email-form-contact" action="#" netlify>
             <label for="Firstname">{% t pages.contact.form.prenom.title %}</label>
@@ -26,7 +26,7 @@ layout: default
           </div>
       </div>
       <div class="col-md-6">
-        <img class="img-contact hidden-sm" sizes="(max-width: 991px) 100vw, 620px" src="/images/contact/lausanne_overview.jpg" srcset="/images/contact/lausanne_overview-500x313.jpg 500w, /images/contact/lausanne_overview-800x500.jpg 800w, /images/contact/lausanne_overview-1080x675.jpg 1080w, /images/contact/lausanne_overview-1600x1000.jpg 1600w, /images/contact/lausanne_overview.jpg 1680w" width="100%">
+        <img class="img-contact hidden-sm" src="/images/contact/lausanne_overview.jpg" width="100%">
         <p class="physique"><strong>Lausanne 2020</strong><br>Comité d'organisation<br>Maison du Sport International<br>Av. de Rhodanie 54, 1007, Lausanne</p>
       </div>
     </div>
