--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ layout: default
 <div class="latestnews_section">
   <div class="container">
     <h1 class="h1_contact">{% t pages.contact.title %}</h1>
-    <div class="row" style="margin-top: 140px;">
+    <div class="row">
       <div class="col-md-6 form">
           <form class="form form-contact" data-name="Email Form" id="email-form-contact" netlify-honeypot="champcache" name="email-form-contact" action="#" netlify>
             <label for="Firstname">{% t pages.contact.form.prenom.title %}</label>
