--- a/venues.html
+++ b/venues.html
@@ -2,87 +2,33 @@
 layout: default
 ---
 
-{% assign section1 = site.data.contentful.spaces.sectionSites.sectionSites[0]%} 
-{% assign section2 = site.data.contentful.spaces.sectionSites.sectionSites[1]%}
+{% assign document = site.prismicData.single.page_venues %}
 
 <div class="sites" id="sites1">
   <div class="container fade-in-module">
     <h1>
-      {% if site.lang == "fr" %} {{ section1.titre }} {% elsif site.lang == "de" %} {{ section1.titreDe }} {% elsif site.lang == "it" %} {{ section1.titreIt }} {% else %} {{ section1.titreEn
-      }} {% endif %}
+      {{document.fragments.title_section_1.text}}
     </h1>
     <p class="discover_1 discover_p fade-in-module">
-      {% if site.lang == "fr" %}
-        {{ section1.description | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% elsif site.lang == "de" %}
-        {{ section1.descriptionDe | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% elsif site.lang == "it" %}
-        {{ section1.descriptionIt | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% else %}
-        {{ section1.descriptionEn | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% endif %}
+      {{ document.fragments.content_section_1.text | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
     </p>
-    <div class="row-sites row">
+    {% for post in document.fragments.venues_section_1.group_documents %}
+      <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section1.titreSite1}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite1De }} {% elsif site.lang == "it" %} {{ section1.lienSite1It }}
-          {% else %} {{ section1.lienSite1En }} {% endif %}'>
+        <a class="lienSite" title="{{site.prismicData.contentById[post.fragments.venue.id].fragments.title.text}}" target="_blank" rel="noopener noreferrer"
+            href='{{site.prismicData.contentById[post.fragments.venue.id].fragments.link.url}}'>
           <div class="blockSite">
             <div class="imgSite">
-              <img src="{{ section1.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite1.url }}?w=700&h=700&q=80 700w"
-                alt="{{section1.imageSite1.description}}" />
+              <img src="{{site.prismicData.contentById[post.fragments.venue.id].fragments.image.url}}"
+                alt="{{site.prismicData.contentById[post.fragments.venue.id].fragments.image.alt}}" />
             </div>
             <div class="textSite">
-              {{section1.titreSite1}}
+              {{site.prismicData.contentById[post.fragments.venue.id].fragments.description.text}}
             </div>
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section1.titreSite2}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite2De }} {% elsif site.lang == "it" %} {{ section1.lienSite2It }}
-          {% else %} {{ section1.lienSite2En }} {% endif %}'>
-          <div class="blockSite">
-            <div class="imgSite">
-              <img src="{{ section1.imageSite2.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite2.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite2.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite2.url }}?w=700&h=700&q=80 700w"
-                alt="{{section1.imageSite2.description}}" />
-            </div>
-            <div class="textSite">
-              {{section1.titreSite2}}
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section1.titreSite3}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite3De }}  {% elsif site.lang == "it" %} {{ section1.lienSite3It }}
-          {% else %} {{ section1.lienSite3En }} {% endif %}'>
-          <div class="blockSite">
-            <div class="imgSite">
-              <img src="{{ section1.imageSite3.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite3.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite3.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite3.url }}?w=700&h=700&q=80 700w"
-                alt="{{section1.imageSite3.description}}" />
-            </div>
-            <div class="textSite">
-              {{section1.titreSite3}}
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section1.titreSite4}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section1.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section1.lienSite4De }}  {% elsif site.lang == "it" %} {{ section1.lienSite4It }}
-          {% else %} {{ section1.lienSite4En }} {% endif %}'>
-          <div class="blockSite">
-            <div class="imgSite">
-              <img src="{{ section1.imageSite4.url }}?w=700&h=700&q=80" srcset="{{ section1.imageSite4.url }}?w=350&h=350&q=70 350w, {{ section1.imageSite4.url }}?w=500&h=500&q=70 500w, {{ section1.imageSite4.url }}?w=700&h=700&q=80 700w"
-                alt="{{section1.imageSite4.description}}" />
-            </div>
-            <div class="textSite">
-              {{section1.titreSite4}}
-            </div>
-          </div>
-        </a>
-      </div>
+    {% endfor %}
     </div>
   </div>
 </div>
@@ -93,117 +39,44 @@ layout: default
 </div>
 <div class="sites">
   <div class="container fade-in-module">
-    <h1>
-      {% if site.lang == "fr" %} {{ section2.titre }} {% elsif site.lang == "de" %} {{ section2.titreDe }} {% else %} {{ section2.titreEn
-      }} {% endif %}
-    </h1>
     <p class="discover_1 discover_p fade-in-module">
-      {% if site.lang == "fr" %}
-        {{ section2.description | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% elsif site.lang == "de" %}
-        {{ section2.descriptionDe | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% elsif site.lang == "it" %}
-        {{ section2.descriptionIt | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% else %}
-        {{ section2.descriptionEn | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
-      {% endif %}
+      {{ document.fragments.content_section_2.text | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
     </p>
-    <div class="row-sites row">
+    {% for post in document.fragments.venues_section_2.group_documents %}
+      <div class="row-sites row">
       <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section2.titreSite1}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite1Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite1De }} {% elsif site.lang == "it" %} {{ section2.lienSite1It }}
-          {% else %} {{ section2.lienSite1En }} {% endif %}'>
+        <a class="lienSite" title="{{site.prismicData.contentById[post.fragments.venue.id].fragments.title.text}}" target="_blank" rel="noopener noreferrer"
+            href='{{site.prismicData.contentById[post.fragments.venue.id].fragments.link.url}}'>
           <div class="blockSite">
             <div class="imgSite">
-              <img src="{{ section2.imageSite1.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite1.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite1.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite1.url }}?w=700&h=700&q=80 700w"
-                alt="{{section2.imageSite1.description}}" />
+              <img src="{{site.prismicData.contentById[post.fragments.venue.id].fragments.image.url}}"
+                alt="{{site.prismicData.contentById[post.fragments.venue.id].fragments.image.alt}}" />
             </div>
             <div class="textSite">
-              {{section2.titreSite1}}
+              {{site.prismicData.contentById[post.fragments.venue.id].fragments.description.text}}
             </div>
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section2.titreSite2}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite2Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite2De }} {% elsif site.lang == "it" %} {{ section2.lienSite2It }}
-          {% else %} {{ section2.lienSite2En }} {% endif %}'>
-          <div class="blockSite">
-            <div class="imgSite">
-              <img src="{{ section2.imageSite2.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite2.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite2.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite2.url }}?w=700&h=700&q=80 700w"
-                alt="{{section2.imageSite2.description}}" />
-            </div>
-            <div class="textSite">
-              {{section2.titreSite2}}
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section2.titreSite3}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite3Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite3De }} {% elsif site.lang == "it" %} {{ section2.lienSite3It }}
-          {% else %} {{ section2.lienSite3En }} {% endif %}'>
-          <div class="blockSite">
-            <div class="imgSite">
-              <img src="{{ section2.imageSite3.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite3.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite3.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite3.url }}?w=700&h=700&q=80 700w"
-                alt="{{section2.imageSite3.description}}" />
-            </div>
-            <div class="textSite">
-              {{section2.titreSite3}}
-            </div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-3 col-sm-6 come-in-module">
-        <a class="lienSite" title="{{section2.titreSite4}}" target="_blank" rel="noopener noreferrer"
-            href='{% if site.lang == "fr" %} {{ section2.lienSite4Fr }} {% elsif site.lang == "de" %} {{ section2.lienSite4De }} {% elsif site.lang == "it" %} {{ section2.lienSite4It }}
-          {% else %} {{ section2.lienSite4En }} {% endif %}'>
-          <div class="blockSite">
-            <div class="imgSite">
-              <img src="{{ section2.imageSite4.url }}?w=700&h=700&q=80" srcset="{{ section2.imageSite4.url }}?w=350&h=350&q=70 350w, {{ section2.imageSite4.url }}?w=500&h=500&q=70 500w, {{ section2.imageSite4.url }}?w=700&h=700&q=80 700w"
-                alt="{{section2.imageSite4.description}}" />
-            </div>
-            <div class="textSite">
-              {{section2.titreSite4}}
-            </div>
-          </div>
-        </a>
-      </div>
-    </div>
+    {% endfor %}
   </div>
 </div>
 <div class="sites" id="sites2">
   <div class="container fade-in-module">
     <h1 class="venues_title">
-      {% t pages.venues.title %}
+      {{ document.fragments.title_section_3.text }}
     </h1>
-    <h3 class="venues_subtitle">
-      {% t pages.venues.subtitle1 %}
-    </h3>
     <div class="venues_txt">
-      <p class="about_venues">
-        {% t pages.venues.text1 %}
-        <br> &nbsp;
-        <br>
-        <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link1 %}'>{% t pages.venues.textlink1 %}</a>
-      </p>
+      {{ document.fragments.content_section_3.html}}
     </div>
     <div class="venues_img">
-      <img src="/images/venues/Vortex_Copyright.png" />
+      <img src="{{ document.fragments.image_1_section_3.url }}" alt="{{ document.fragments.image_1_section_3.alt }}" />
     </div>
-    <h3 class="venues_subtitle">
-      {% t pages.venues.subtitle2 %}
-    </h3>
     <div class="venues_txt">
-      <p class="about_venues">
-        {% t pages.venues.text2 %}
-        <br> &nbsp;
-        <br>
-        <a class="venues_link" target="_blank" rel="noopener noreferrer" href='{% t pages.venues.link2 %}'>{% t pages.venues.textlink2 %}</a>
-      </p>
+      {{ document.fragments.content_part_2_section_3.html }}
     </div>
     <div class="venues_img">
-      <img src="/images/venues/Flon.png" />
+      <img src="{{ document.fragments.image_part_2_section_3.url }}" alt="{{ document.fragments.image_part_2_section_3.alt }}" />
     </div>
   </div>     
-</div>     
+</div>  
