--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@ layout: default
             <div>{{ form.form.thanks }}</div>
           </div>
           <div class="error form-fail">
-            <div>Oops! Something went wrong while submitting the form</div>
+            <div>{{ form.form.error }}</div>
           </div>
       </div>
       <div class="col-md-6">
