--- a/news.html
+++ b/news.html
@@ -26,7 +26,8 @@ layout: default
     <h1 class="h1_big_news h1_newsletter_cta">News</h1>
       
     <div class="row">
-      {% for news_item in site.prismicData.collections.news limit:9 %}
+      {% assign news = site.prismicData.collections.news | sort:'fragments.publication_date.date' | reverse  %}
+      {% for news_item in news limit:9 %}     
         <div class="come-in-module col-sm-6 col-md-4">
            <a class="wrap_a" href="/{{ site.langShort }}/news/{{ news_item.slug }}">
               <div class="new col-md-12">
